--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -5,7 +5,31 @@
   justify-content: center;
   align-items: center;
 }
-.login button {
+.login_shell {
+  border: 2px solid black;
+  width: 300px;
+  width: 90vw;
+  max-width: 350px;
+  height: 400px;
+}
+.login_shell_line {
+  padding: 20px;
+}
+.login_shell_line input {
+  width: 100%;
+  line-height: 1.5;
+  font-size: larger;
+  padding: 5px;
+  border-radius: 5px;
+  border: 2px solid green;
+  font-family: "Lora", serif !important;
+  font-style: italic;
+}
+.login_shell_line input:focus {
+  box-shadow: 0px 0px 3px 1px rgb(18, 196, 18);
+  outline: none;
+}
+.login_shell button {
   width: 200px;
   height: 50px;
   background-color: black;
