--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -1,13 +1,38 @@
+
 .login{
     border: 2px solid purple;
     height: 100vh;
     display: grid;
     justify-content: center;
     align-items: center;
-    button{
-        width: 200px;
-        height: 50px;
-        background-color: black;
-        color:yellow;
+    &_shell{
+        border:2px solid black;
+        width: 300px;
+        width: 90vw;
+        max-width: 350px;
+        height: 400px;
+        &_line{
+            padding: 20px;
+            input{
+                width: 100%;
+                line-height: 1.5;
+                font-size: larger;
+                padding: 5px;
+                border-radius: 5px;
+                border: 2px solid green;
+                font-family: 'Lora', serif !important;
+                font-style: italic;
+                &:focus{
+                    box-shadow: 0px 0px 3px 1px rgb(18, 196, 18);
+                    outline: none;
+                }
+            }
+        }
+        button{
+            width: 200px;
+            height: 50px;
+            background-color: black;
+            color:yellow;
+        }
     }
 }
