--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,37 +1,44 @@
 .login {
-  border: 2px solid purple;
   height: 100vh;
   display: grid;
   justify-content: center;
   align-items: center;
+  background: #2f1b41;
 }
 .login_shell {
-  border: 2px solid black;
   width: 300px;
   width: 90vw;
-  max-width: 350px;
+  max-width: 400px;
   height: 400px;
+  box-shadow: 0px 0px 5px 2px #fecd51;
+  border-radius: 10px;
 }
 .login_shell_line {
-  padding: 20px;
+  padding: 10px 20px;
 }
 .login_shell_line input {
   width: 100%;
   line-height: 1.5;
   font-size: larger;
-  padding: 5px;
+  padding: 5px 25px;
   border-radius: 5px;
-  border: 2px solid green;
   font-family: "Lora", serif !important;
   font-style: italic;
+  background: #fecd51;
+  color: #2f1b41;
+  border: none;
 }
 .login_shell_line input:focus {
-  box-shadow: 0px 0px 3px 1px rgb(18, 196, 18);
+  box-shadow: 0px 0px 3px 1px #fecd51;
   outline: none;
 }
 .login_shell button {
-  width: 200px;
+  width: 100%;
   height: 50px;
-  background-color: black;
+  background: transparent;
   color: yellow;
+  border: none;
+  box-shadow: 0px 0px 3px 2px #fecd51;
+  font-family: "Lora", serif !important;
+  font-size: larger;
 }/*# sourceMappingURL=Login.module.css.map */
