--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -9,12 +9,13 @@
   width: 300px;
   width: 90vw;
   max-width: 400px;
-  height: 400px;
+  height: 450px;
   box-shadow: 0px 0px 5px 2px #fecd51;
   border-radius: 10px;
+  padding: 10px 20px;
 }
 .login_shell_line {
-  padding: 10px 20px;
+  padding: 10px 0;
 }
 .login_shell_line input {
   width: 100%;
@@ -27,16 +28,23 @@
   background: #fecd51;
   color: #2f1b41;
   border: none;
+  height: 45px;
 }
 .login_shell_line input:focus {
   box-shadow: 0px 0px 3px 1px #fecd51;
   outline: none;
 }
+.login_shell_padlock {
+  padding: 10px 20px;
+  background-color: silver;
+  height: 50%;
+}
 .login_shell button {
   width: 100%;
   height: 50px;
   background: transparent;
-  color: yellow;
+  color: #fecd51;
+  border-radius: 5px;
   border: none;
   box-shadow: 0px 0px 3px 2px #fecd51;
   font-family: "Lora", serif !important;
