Padlock almost done.
Useframe to be activated.

Keep going.

Remember why you started.

--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -31,7 +31,7 @@
   height: 45px;
 }
 .login_shell_line input:focus {
-  box-shadow: 0px 0px 3px 1px #fecd51;
+  box-shadow: 0px 0px 3px 1px rgb(254, 205, 81);
   outline: none;
 }
 .login_shell_padlock {
