--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -28,7 +28,7 @@
                 border: none;
                 height: 45px;
                 &:focus{
-                    box-shadow: 0px 0px 3px 1px #fecd51;
+                    box-shadow: 0px 0px 3px 1px rgb(254, 205, 81);
                     outline: none;
                 }
             }
