--- a/styles/Login.module.scss
+++ b/styles/Login.module.scss
@@ -10,7 +10,7 @@
         width: 90vw;
         max-width: 400px;
         height: 450px;
-        box-shadow: 0px 0px 5px 2px #fecd51;
+        box-shadow: 0px 0px 10px 1px #fecd51;
         border-radius: 10px;
         padding: 10px 20px;
         &_line{
@@ -37,6 +37,10 @@
             padding: 10px 20px;
             height: 50%;
         }
+        #animated_line{
+            animation: blink 0.8s infinite;
+            background-color: #AB0041;
+        }
         button{
             width: 100%;
             height: 50px;
@@ -46,7 +50,20 @@
             border: none;
             box-shadow: 0px 0px 3px 2px #fecd51;
             font-family: 'Lora', serif !important;
-            font-size: larger;
+            font-size: large;
         }
+    }
+}
+
+
+@keyframes blink {
+    0%{
+        font-size: large;
+    }
+    50%{
+        font-size: larger;
+    }
+    100%{
+        font-size: large;
     }
 }
