--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -1,30 +1,47 @@
 .console{
     //border: 2px solid  maroon;
     height: 100vh;
-    width: 400px;
+    width: 350px;
     display: grid;
     &_current{
         padding: 20px;
+        position: relative;
         :nth-child(1){
-            height: 90px;
+            height: 70px;
             background-color: crimson;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             display: flex;
             justify-content: space-around;
-            span{
+            #holder{
                 display: block;
-                width: 12px;
+                width: 13px;
                 height: 30px;
                 background-color: black;
                 border-radius: 5px;
                 position: relative;
                 top:-10px;
+                z-index: 20 !important;
             }
         }
         :nth-child(2){
             height: 160px;
             background-color: rgb(222, 219, 219);
+        }
+        :nth-child(3){
+            height: 40px;
+            position: relative;
+            top:-230px;
+            display: flex;
+            justify-content: space-around;
+            #oval{
+                display: block;
+                position: relative;
+                width: 20px; height: 20px;
+                background-color: white;
+                top:7px;
+                border-radius: 50%;
+            }
         }
     }
 }
