--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -6,9 +6,9 @@
     &_current{
         padding: 20px;
         position: relative;
-        :nth-child(1){
+        &_top{
             height: 70px;
-            background-color: crimson;
+            background-color: #2f1b41;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
             display: flex;
@@ -17,18 +17,30 @@
                 display: block;
                 width: 13px;
                 height: 30px;
-                background-color: black;
+                background-color: silver;
                 border-radius: 5px;
                 position: relative;
                 top:-10px;
                 z-index: 20 !important;
             }
         }
-        :nth-child(2){
+        &_center{
             height: 160px;
             background-color: rgb(222, 219, 219);
+            font-family: 'Lora', serif !important;
+            display: grid;
+            justify-content: center;
+            align-items: center;
+            font-size: 35px;
+            color: #2f1b41;
+            text-align: center;
+            :nth-child(2){
+                color: #c50851;
+                font-size: 30px;
+                padding-top: 10px;
+            }
         }
-        :nth-child(3){
+        &_holes{
             height: 40px;
             position: relative;
             top:-230px;
