--- a/components/Calendar.css
+++ b/components/Calendar.css
@@ -1,24 +1,9 @@
 .react-calendar {
-  width: 350px;
   max-width: 100%;
-  background: orange;
+  background: rgb(222, 219, 219);
   border: 1px solid #a0a096;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Lora', serif !important;
   line-height: 1.125em;
-}
-
-.react-calendar--doubleView {
-  width: 700px;
-}
-
-.react-calendar--doubleView .react-calendar__viewContainer {
-  display: flex;
-  margin: -0.5em;
-}
-
-.react-calendar--doubleView .react-calendar__viewContainer > * {
-  width: 50%;
-  margin: 0.5em;
 }
 
 .react-calendar,
@@ -34,6 +19,8 @@
   margin: 0;
   border: 0;
   outline: none;
+  font-family: 'Lora', serif !important;
+  font-size: large;
 }
 
 .react-calendar button:enabled:hover {
@@ -44,11 +31,13 @@
   display: flex;
   height: 44px;
   margin-bottom: 1em;
+  background: #2f1b41;
 }
 
 .react-calendar__navigation button {
   min-width: 44px;
   background: none;
+  color: white;
 }
 
 .react-calendar__navigation button:disabled {
@@ -57,7 +46,7 @@
 
 .react-calendar__navigation button:enabled:hover,
 .react-calendar__navigation button:enabled:focus {
-  background-color: #e6e6e6;
+  background-color: none;
 }
 
 .react-calendar__month-view__weekdays {
@@ -111,12 +100,12 @@
 }
 
 .react-calendar__tile--now {
-  background: #ffff76;
+  background: #c50851;
 }
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #ffffa9;
+  background: #c50851;
 }
 
 .react-calendar__tile--hasActive {
@@ -125,17 +114,17 @@
 
 .react-calendar__tile--hasActive:enabled:hover,
 .react-calendar__tile--hasActive:enabled:focus {
-  background: #a9d4ff;
+  background: #2f1b41;
 }
 
 .react-calendar__tile--active {
-  background: #006edc;
+  background: #2f1b41;
   color: white;
 }
 
 .react-calendar__tile--active:enabled:hover,
 .react-calendar__tile--active:enabled:focus {
-  background: #1087ff;
+  background: #2f1b41;
 }
 
 .react-calendar--selectRange .react-calendar__tile--hover {
