--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -1,7 +1,12 @@
+.double {
+  display: flex;
+}
+
 .console {
   height: 100vh;
   width: 350px;
   padding: 20px;
+  padding-top: 50px;
 }
 .console_current {
   position: relative;
@@ -55,4 +60,24 @@
   background-color: white;
   top: 7px;
   border-radius: 50%;
+}
+.console_calendar {
+  position: relative;
+  top: -20px;
+}
+.console_edit {
+  width: 100%;
+  height: 50px;
+  font-family: "Lora", serif !important;
+  font-size: large;
+  color: whitesmoke;
+  font-weight: bold;
+  background-color: #2f1b41;
+}
+
+.detail {
+  border: 2px solid red;
+  width: 100%;
+  padding: 20px;
+  padding-top: 50px;
 }/*# sourceMappingURL=Appointment.module.css.map */
