--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -1,8 +1,13 @@
+.double{
+    display: flex;
+}
+
 .console{
     //border: 2px solid  maroon;
     height: 100vh;
     width: 350px;
     padding: 20px;
+    padding-top: 50px;
     &_current{
         position: relative;
         &_top{
@@ -55,4 +60,23 @@
             }
         }
     }
+    &_calendar{
+        position: relative;
+        top: -20px;
+    }
+    &_edit{
+        width: 100%;
+        height: 50px;
+        font-family: 'Lora', serif !important;
+        font-size: large;
+        color: whitesmoke;
+        font-weight: bold;
+        background-color: #2f1b41;
+    }
+}
+.detail{
+    border:2px solid red;
+    width: 100%;
+    padding: 20px;
+    padding-top: 50px;
 }
