--- a/components/Calendar.css
+++ b/components/Calendar.css
@@ -100,12 +100,12 @@
 }
 
 .react-calendar__tile--now {
-  background: #c50851;
+  background: orange;
 }
 
 .react-calendar__tile--now:enabled:hover,
 .react-calendar__tile--now:enabled:focus {
-  background: #c50851;
+  background: orange;
 }
 
 .react-calendar__tile--hasActive {
