--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -74,9 +74,27 @@
         background-color: #2f1b41;
     }
 }
+
 .detail{
     border:2px solid red;
     width: 100%;
     padding: 20px;
     padding-top: 50px;
+    h1{
+        background-color: #2f1b41;
+        color: yellow;
+    }
+    &_appointment{
+        border:2px solid blue;
+        height: 150px;
+    }
+    &_schedule{
+        border: 2px solid purple;
+        height: 400px;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        &_each{
+            border:1px solid salmon;
+        }
+    }
 }
