Appointment time slots created.
Will pump them into the buttons.

Keep going..

Remember why you started.

--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -84,6 +84,8 @@
 .detail h1 {
   background-color: #2f1b41;
   color: yellow;
+  display: grid;
+  justify-content: center;
 }
 .detail_appointment {
   border: 2px solid blue;
