--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -74,7 +74,6 @@
 }
 
 .detail{
-    border:2px solid red;
     width: 100%;
     padding: 20px;
     padding-top: 50px;
@@ -93,7 +92,7 @@
         grid-template-columns: 1fr 1fr;
         gap: 5px;
         &_each{
-            border:1px solid #2f1b41;;
+            border:1px solid #2f1b41;
         }
     }
 }
