--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -86,6 +86,27 @@
 }
 .detail_appointment {
   height: 200px;
+  display: grid;
+  justify-content: center;
+  align-items: center;
+}
+.detail_appointment #shell {
+  border: 2px solid blue;
+  padding: 10px;
+  display: flex;
+}
+.detail_appointment #shell #clock {
+  border: 2px solid green;
+  text-align: center;
+}
+.detail_appointment #shell #clock img {
+  -o-object-fit: contain;
+     object-fit: contain;
+  width: 90px;
+  height: 90px;
+}
+.detail_appointment #shell #info {
+  border: 2px solid pink;
 }
 .detail_schedule {
   height: 400px;
@@ -95,4 +116,5 @@
 }
 .detail_schedule_each {
   border: 1px solid #2f1b41;
+  height: 45px;
 }/*# sourceMappingURL=Appointment.module.css.map */
