Dual content in place.
Alternating images and text and buttons.

Css to be finalized.

Toggle system in place to expand available time slots.

Keep going.

Remmeber why you started.

--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -101,6 +101,7 @@
 }
 .detail_appointment #shell #clock {
   text-align: center;
+  cursor: pointer;
 }
 .detail_appointment #shell #clock img {
   -o-object-fit: contain;
