--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -97,6 +97,7 @@
             border-radius: 20px;
             #clock{
                 text-align: center;
+                cursor: pointer;
                 img{
                     object-fit: contain;
                     width: 90px;
