--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -151,6 +151,10 @@
         &_each{
             border:1px solid #2f1b41;
             height: 45px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            column-gap: 10px;
         }
     }
 }
