--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -89,12 +89,24 @@
         display: grid;
         justify-content: center;
         align-items: center;
+        position: relative;
         #shell{
             padding: 10px;
             display: flex;
             column-gap: 10px;
             border: 1px solid #2f1b41;
             border-radius: 20px;
+            position: relative;
+            #temp{
+                position: absolute;
+                top:0; bottom: 0; right: 0; left: 0;
+                background-color: #2f1b41;
+                display: grid;
+                justify-content: center;
+                align-items: center;
+                border-radius: 20px;
+                color: #c50851;
+            }
             #clock{
                 text-align: center;
                 cursor: pointer;
