--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -107,7 +107,7 @@
   bottom: 0;
   right: 0;
   left: 0;
-  background-color: #2f1b41;
+  background-color: white;
   display: grid;
   justify-content: center;
   align-items: center;
