--- a/styles/Appointment.module.scss
+++ b/styles/Appointment.module.scss
@@ -100,7 +100,7 @@
             #temp{
                 position: absolute;
                 top:0; bottom: 0; right: 0; left: 0;
-                background-color: #2f1b41;
+                background-color: white;
                 display: grid;
                 justify-content: center;
                 align-items: center;
