--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -97,9 +97,19 @@
   display: flex;
   -moz-column-gap: 10px;
        column-gap: 10px;
-  border: 1px solid #2f1b41;
+  border: 2px solid #2f1b41;
   border-radius: 20px;
   position: relative;
+}
+.detail_appointment #shell button {
+  border: 2px solid #2f1b41;
+  color: #c50851;
+  width: 90px;
+  padding: 10px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  font-weight: bold;
+  font-size: 14px;
 }
 .detail_appointment #shell #temp {
   position: absolute;
@@ -113,6 +123,35 @@
   align-items: center;
   border-radius: 20px;
   color: #c50851;
+}
+.detail_appointment #shell #temp #loader {
+  position: absolute;
+  display: grid;
+  align-self: center;
+  left: 20%;
+  border: 4px solid #f3f3f3;
+  border-top: 4px solid #c50851;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
+          animation: spin 2s linear infinite;
+}
+@-webkit-keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 .detail_appointment #shell #clock {
   text-align: center;
