--- a/styles/Appointment.module.css
+++ b/styles/Appointment.module.css
@@ -113,15 +113,15 @@
 }
 .detail_appointment #shell #temp {
   position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+  top: -3px;
+  bottom: -3px;
+  right: -3px;
+  left: -3px;
   background-color: white;
   display: grid;
   justify-content: center;
   align-items: center;
-  border-radius: 10px;
+  border-radius: 20px;
   color: #c50851;
 }
 .detail_appointment #shell #temp #loader {
